styles.css
@import url("./reset.css");
@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');

:root {
  /* Colours */ 
  --cyan-600: hsl(192 37 48);
  --cyan-400: hsl(192 54 64);
  --cyan-300: hsl(192 90 77);

  --purple-600: hsl(268 34 53);
  --purple-400: hsl(268 55 71);
  --purple-300: hsl(268 100 86);

  --slate-900: hsl(240 21 20);
  --slate-600: hsl(240 10 57);
  --slate-300: hsl(240 18 85);

  --white: hsl(0 0 98);

  /* Typography */
  --default-page-font: "Red Hat Display", Arial, Helvetica, sans-serif;

  --heading-line-height: 110%;
  --text-line-height: 150%;

  --h1-font-size: 2.5rem;
  --h1-font-weight: 900;

  --h2-font-size: 2rem;
  --h2-font-weight: 900;

  --h3-font-size: 0.75rem;
  --h3-font-weight: 900;
  --h3-letter-spacing: 0.25rem;

  --text-font-size: 1rem;
  --text-font-weight: 500;

  --button-font-size: 1rem;
  --button-font-weight: 900;

  /* Spacing */
  --spacing-50: 4px;
  --spacing-100: 8px;
  --spacing-200: 16px;
  --spacing-300: 24px;
  --spacing-400: 32px;
  --spacing-500: 40px;
  --spacing-600: 48px;
  --spacing-700: 56px;
  --spacing-800: 64px;
  --spacing-900: 72px;
  --spacing-1000: 80px;
  --spacing-1400: 112px;

  /* Defaults */
  --button-color: var(--purple-600);
  --button-highlight: var(--purple-300);
  --button-hover-color: var(--purple-400);
}

html {
  height: 100%;

  font-family: var(--default-page-font);
  line-height: var(--text-line-height);

  text-align: center;
}

body {
  min-height: 100%;

  background-color: var(--white);

  display: flex;
  flex-direction: column;
  justify-content: center;

  padding-block: var(--spacing-600);
}

.header__logo {
  margin: auto;
}

.hero {
  padding: var(--spacing-400);
  padding-top: var(--spacing-800);
}

.hero__img-wrap {
  margin-left: -20%;
  margin-right: -20%;

  padding-bottom: var(--spacing-600);
}

.hero__content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: var(--spacing-300);
}

.hero__heading {
  font-size: var(--h1-font-size);
  font-weight: var(--h1-font-weight);
  line-height: var(--heading-line-height);
  color: var(--slate-900);
}

.hero__text {
  font-size: var(--text-font-size);
  font-weight: var(--text-font-weight);
  color: var(--slate-600);
}

.hero__button-wrap {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: var(--spacing-200);
}

.button {
  border: none;
  border-radius: 2em;

  padding-block: var(--spacing-200);
  padding-inline: var(--spacing-500);

  background-color: var(--button-color);

  font-size: var(--button-font-size);
  font-weight: var(--button-font-weight);
  line-height: var(--text-line-height);
  color: var(--white);

  transition: background-color 0.8s ease;
}

.button:hover {
  background-color: var(--button-hover-color);
}

.button__highlight {
  color: var(--button-highlight);
}

.button--purple {
  --button-color: var(--purple-600);
  --button-highlight: var(--purple-300);
  --button-hover-color: var(--purple-400);
}

.button--cyan {
  --button-color: var(--cyan-600);
  --button-highlight: var(--cyan-300);
  --button-hover-color: var(--cyan-400);
}

@media (min-width: 768px) {
  :root {
    --h1-font-size: 3rem;
    --h2-font-size: 2.25rem;
    --h3-font-size: 0.875rem;
  }
}

@media (min-width: 1440px) {
  :root {
    --h1-font-size: 4rem;
    --h2-font-size: 2.5rem;
    --h3-font-size: 1rem;
    --text-font-size: 1.125rem;
  }
}

